--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Escribe tu texto </title>
+        <title> Planes de Entrenamiento </title>
     </head>
     <body>
         
